# CAF_Playground

./: .gitignore  CAF.props  CAF_Playground.sln  README.md
BasicWorkflow/: BasicWorkflow.cpp  BasicWorkflow.vcxproj
HelloWorld/: HelloWorld.cpp  HelloWorld.vcxproj
HttpTest/: HttpTest.vcxproj  Source.cpp
PocoWithCAF/: CMakeLists.txt  PocoOpenAIClient.cpp  PocoOpenAiClient.h  PocoWithCAF.vcxproj  Source.cpp
